--- a/lib/css/_variables-gc.scss
+++ b/lib/css/_variables-gc.scss
@@ -1,9 +1,10 @@
 
 // COLORS
 
-$backgroundColor: #fcf8e3; //#eee;
-$mainColor: #222;
-$headingColor: #222;
+$backgroundColor: #222; //#eee;
+$mainColor: #fcf8e3;
+$headingColor: #00BFFF;
+$titleHeadingColor: #000;
 $contentBoxColor: lighten($mainColor, 50%);
 
 $invertedPercentageBackground: 80%;
