--- a/lib/css/_reveal-features-gc.scss
+++ b/lib/css/_reveal-features-gc.scss
@@ -37,6 +37,10 @@ $colorsList: (
   display: flex;
 }
 
+.annotation {
+  stroke-width: 3px;
+}
+
 .background {
   position: relative;
   width: 100%;
