Slides for class 3&4

--- a/lib/css/_reveal-features-gc.scss
+++ b/lib/css/_reveal-features-gc.scss
@@ -83,6 +83,12 @@ hr {
 	}
 }
 
+.invert {
+  color: $backgroundColor;
+  background-color: $mainColor;
+}
+  
+
 /*********************************************
 * SPECIAL SLIDE CLASSES
 *********************************************/
