--- a/lib/css/_reveal-theme-gc.scss
+++ b/lib/css/_reveal-theme-gc.scss
@@ -160,6 +160,11 @@ $list-style-type: (
 	font-style: italic;
 }
 
+.monospace {
+  font-family: $codeFont;
+}
+
+
 .reveal pre {
 	display: block;
 	position: relative;
@@ -168,12 +173,17 @@ $list-style-type: (
 
 	text-align: left;
 	font-size: 0.55em;
-	font-family: monospace;
+	font-family: $codeFont;
 	line-height: 1.2em;
 
 	word-wrap: break-word;
 
 	// box-shadow: 0px 0px 6px rgba(0,0,0,0.3);
+}
+
+.reveal pre .bigger {
+  font-family: $codeFont;
+  font-size: 0.75em;
 }
 
 .reveal code {
@@ -233,6 +243,10 @@ $list-style-type: (
 	font-size: 0.6em;
 	line-height: 1.2em;
 	vertical-align: top;
+}
+
+.reveal .faded {
+  opacity: 25%;
 }
 
 .reveal small * {
