--- a/lib/css/_reveal-theme-gc.scss
+++ b/lib/css/_reveal-theme-gc.scss
@@ -249,6 +249,25 @@ $list-style-type: (
   opacity: 25%;
 }
 
+.reveal .light {
+  opacity: 0.75;
+}
+
+.reveal .lighter {
+  opacity: 0.5;
+}
+
+.reveal .lightest {
+  opacity: 0.25;
+}
+
+.reveal .slides section .fragment.step-fade-in-then-out {
+	opacity: 0;
+	display: none; }
+.reveal .slides section .fragment.step-fade-in-then-out.current-fragment {
+	opacity: 1;
+	display: inline; }
+
 .reveal small * {
 	vertical-align: top;
 }
